--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <h2>conheça um pouco dos meu projetos</h2>
         <div>
             <ul>
-                <li><a href="https://eduardodev145.github.io/projeto-login/" target="_blank">Tela de login</a></li>
+                <li class="cor1"><a href="https://eduardodev145.github.io/projeto-login/" target="_blank">Tela de login</a></li>
                 
-                <li><a href="https://eduardodev145.github.io/HTML-CSS/Exercicios/exerciocio%209/android.html"> Projeto android</a></li>
+                <li class="cor2"><a href="https://eduardodev145.github.io/HTML-CSS/Exercicios/exerciocio%209/android.html" target="_blank"> Projeto android</a></li>
 
-                <li><a href="https://eduardodev145.github.io/HTML-CSS/Exercicios/projeto-cordel3/cordel.html">Cordel moderno</a></li>
+                <li  class="cor3"><a href="https://eduardodev145.github.io/HTML-CSS/Exercicios/projeto-cordel3/cordel.html" target="_blank">Cordel moderno</a></li>
                 
             </ul>
         </div>
