--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio do eduardo</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/midea-query.css">
 </head>
 <body>
     <header>
@@ -23,7 +24,7 @@
 
         <h2>conheça um pouco dos meu projetos</h2>
         
-        <div>
+        <div id="lista">
             <ul>
                 <li class="cor1"><a href="https://eduardodev145.github.io/projeto-login/" target="_blank">Tela de login</a></li>
                 
