mudei as cores do meu portifolio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <aside>
             <table>
                 <caption>Skills</caption>
-                <tr>
+                <tr class="amarelo">
                     <th>Java Script</th>
                     <td>⭐</td>
                     <td>⭐</td>
@@ -43,7 +43,7 @@
                     <td></td>
                 </tr>
 
-                <tr>
+                <tr class="laranja">
                     <th>HTML</th>
                     <td>⭐</td>
                     <td>⭐</td>
@@ -51,7 +51,7 @@
                     <td>⭐</td>
                 </tr>
 
-                <tr>
+                <tr class="azul">
                     <th>CSS</th>
                     <td>⭐</td>
                     <td>⭐</td>
