fiz algumas curiosidaddes sobre mim

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="sobremim">
                 <p><span>Olá eu sou o edu</span>. me chamo Eduardo da Silva Sousa tenho 24 anos de idade e estou estudando sobre HTML, CSS e Java Script a 1 mês tenho como objetico me tornar um programador Full stack.</p>
 
-                <h2><a href="#">Curiosidades sobre mim</a></h2>
+                <h2><a href="sobre-mim.html" rel="next">Curiosidades sobre mim</a></h2>
 
             </div>
         </nav>
