--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio do Eduardo</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/><!--Link do meu menu hamburginho-->
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -25,11 +26,14 @@
 
         <section>
             <h3>Meus projetos</h3>
-            <ul>
-                <li><a class="link1" href="https://eduardodev145.github.io/projeto-login/" target="_blank">Pagina de login</a></li>
-                <li><a class="link2" href="https://eduardodev145.github.io/HTML-CSS/Exercicios/projeto-cordel3/cordel.html" target="_blank">Cordel Moderno</a></li>
-                <li><a class="link3" href="https://eduardodev145.github.io/HTML-CSS/Exercicios/exerciocio%209/android.html" target="_blank">Hitoria do android</a></li>
-            </ul>
+            <span id="hamburguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+              <menu id="itens">
+                  <ul>
+                    <li><a class="link1" href="https://eduardodev145.github.io/projeto-login/" target="_blank">Pagina de login</a></li>
+                    <li><a class="link2" href="https://eduardodev145.github.io/HTML-CSS/Exercicios/projeto-cordel3/cordel.html" target="_blank">Cordel Moderno</a></li>
+                    <li><a class="link3" href="https://eduardodev145.github.io/HTML-CSS/Exercicios/exerciocio%209/android.html" target="_blank">Hitoria do android</a></li>
+                  </ul>
+              </menu>
         </section>
 
         <aside>
@@ -62,5 +66,17 @@
         </aside>
     </main>
     
+
+    <script>
+        function clickMenu(){
+            if (itens.style.display =='block'){
+                itens.style.display = 'none' // essa linha se le assim ( se o display estiver sendo exibido ele se escondera)
+
+            }else{
+                itens.style.display = 'block' // se não ele vai aparecer. a chamada do metodo onclick no icone que vai fazer isso
+            }
+
+        }
+    </script>
 </body>
 </html>
